--- a/app/scss/helpers/_mixin.scss
+++ b/app/scss/helpers/_mixin.scss
@@ -8,3 +8,7 @@
   padding:0 15px;
   
   }
+  @mixin background-image($imgName,$extension)
+  {
+    background-image: url(../../images/#{$imgName}#{$extension});
+  }
