--- a/app/scss/fonts/_fonts.scss
+++ b/app/scss/fonts/_fonts.scss
@@ -22,3 +22,13 @@
     src: url(../../../SyneTactile-Regular.ttf);
     font-family: syne;
     }
+
+@font-face {
+    src: url(../../FontsFree-Net-SFCompactDisplay-Regular.ttf);
+    font-family: sfcompact;
+        }
+
+@font-face {
+        src: url(../../SF-Compact.dmg);
+        font-family: sfdisplay;
+        }
