--- a/app/scss/helpers/_base.scss
+++ b/app/scss/helpers/_base.scss
@@ -10,6 +10,8 @@ html{
 
 //root-body section 
 body{
+  
+  // font-family:$font-lato;
   font-family: 'Lato', sans-serif;
   padding:0 ;
   margin:0;
