--- a/app/scss/helpers/_variable.scss
+++ b/app/scss/helpers/_variable.scss
@@ -15,4 +15,8 @@ $clr-btn-green:#44AF72;
 $clr-foot-light-green:#1B6D3E;
 $clr-foot-hr-green:#3eff9159;
 
+$img-path:"./../images/";
 
+$font-lato:"Lato";
+
+$font-sf-compact:sfcompact;
