--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,6 @@
 @import './helpers/mixin';
 @import './helpers/variable';
 @import './layout/header';
-@import './layout/home';
+@import './pages/home';
 @import './layout/footer';
-
+@import './fonts/fonts'
